--- a/create/index.html
+++ b/create/index.html
@@ -17,7 +17,7 @@
         <script src="/Instagram-clone/assets/js/common.js"></script>
     </head>
 
-   <body>
+    <body>
         <header>
             <div class="nav-container">
                 <div class="logo-div">
@@ -33,7 +33,9 @@
                         <a href="/Instagram-clone/">
                             <svg aria-label="Home" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                                 viewBox="0 0 48 48" width="22">
-                                <path d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z"></path>
+                                <path
+                                    d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z">
+                                </path>
                             </svg>
                         </a>
                     </div>
@@ -50,9 +52,10 @@
                         <a href="/Instagram-clone/create/">
                             <svg aria-label="New Post" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
-                                <path d="M43.9 4c-2.5-2.4-5.5-4-12.2-4H16.2C9.6 0 6.6 1.6 4 4.1 1.6 6.6 0 9.6 0 16.2v15.5c0 6.6 1.6 9.7 4.1 12.2 2.5 2.4 5.5 4 12.2 4h15.5c6.6 0 9.7-1.6 12.2-4.1 2.4-2.5 4-5.5 4-12.2V16.2c0-6.6-1.6-9.6-4.1-12.2zm-7.6 21.5H25.5v10.8c0 .8-.7 1.5-1.5 1.5s-1.5-.7-1.5-1.5V25.5H11.7c-.8 0-1.5-.7-1.5-1.5s.7-1.5 1.5-1.5h10.8V11.7c0-.8.7-1.5 1.5-1.5s1.5.7 1.5 1.5v10.8h10.8c.8 0 1.5.7 1.5 1.5s-.7 1.5-1.5 1.5z"></path>
-                            </svg>
-                        </a>
+                                <path
+                                    d="M43.9 4c-2.5-2.4-5.5-4-12.2-4H16.2C9.6 0 6.6 1.6 4 4.1 1.6 6.6 0 9.6 0 16.2v15.5c0 6.6 1.6 9.7 4.1 12.2 2.5 2.4 5.5 4 12.2 4h15.5c6.6 0 9.7-1.6 12.2-4.1 2.4-2.5 4-5.5 4-12.2V16.2c0-6.6-1.6-9.6-4.1-12.2zm-7.6 21.5H25.5v10.8c0 .8-.7 1.5-1.5 1.5s-1.5-.7-1.5-1.5V25.5H11.7c-.8 0-1.5-.7-1.5-1.5s.7-1.5 1.5-1.5h10.8V11.7c0-.8.7-1.5 1.5-1.5s1.5.7 1.5 1.5v10.8h10.8c.8 0 1.5.7 1.5 1.5s-.7 1.5-1.5 1.5z">
+                                </path>
+                            </svg></a>
                     </div>
                     <div class="explore-ic nav-icons mob-nav-hide">
                         <a href="/Instagram-clone/explore/">
@@ -88,12 +91,14 @@
                 <a href="/Instagram-clone/">
                     <svg aria-label="Home" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                         viewBox="0 0 48 48" width="22">
-                        <path d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z"></path>
+                        <path
+                            d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z">
+                        </path>
                     </svg>
                 </a>
             </div>
             <div class="search-ic">
-                <a href="/Instagram-clone/">
+                <a href="/Instagram-clone/explore/">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         aria-hidden="true" role="img" width="22" height="22" preserveAspectRatio="xMidYMid meet"
                         viewBox="0 0 20 20">
@@ -151,7 +156,7 @@
                                 </aside>
                                 <div class="input-div">
                                     <input type="url" name="pic" id="pic" class="inputs"
-                                        placeholder="https://raw.githubusercontent.com/akshat-jjain/Instagram-clone/main/assets/images/like-em.png" />
+                                        placeholder="/assets/images/default-user.png" />
                                 </div>
                             </div>
                             <div class="input-div-cont">
@@ -223,12 +228,13 @@
                     </form>
                     <form action="" method="post" id="story-form" class="tab">
                         <div class="all-input-divs">
+                            <ul class="input-div-cont error" id="story-errors"></ul>
                             <div class="input-div-cont">
                                 <aside>
                                     <label for="username" class="inp-labels">Username</label>
                                 </aside>
                                 <div class="input-div">
-                                    <input type="text" name="username" id="username" class="inputs"
+                                    <input type="text" name="username" id="st-username" class="inputs"
                                         placeholder="akshat-jjain" />
                                 </div>
                             </div>
@@ -239,19 +245,21 @@
                                 <span class="label-span">Seen</span>
                             </div>
                             <div class="input-div">
-                                <input type="button" name="submit" id="submit" class="sub" value="Create" />
-                                <input type="button" name="Skip" id="skip2" class="skip" value="Skip & Next" onclick="skip(this.id)" />
+                                <input type="button" name="submit" id="submit" class="sub" value="Create" onclick="loadStory()" />
+                                <input type="button" name="Skip" id="skip2" class="skip" value="Skip & Next"
+                                    onclick="skip(this.id)" />
                             </div>
                         </div>
                     </form>
                     <form action="" method="post" id="post-form" class="tab">
                         <div class="all-input-divs">
+                            <ul class="input-div-cont error" id="post-errors"></ul>
                             <div class="input-div-cont">
                                 <aside>
                                     <label for="username" class="inp-labels">Username</label>
                                 </aside>
                                 <div class="input-div">
-                                    <input type="text" name="username" id="username" class="inputs"
+                                    <input type="text" name="username" id="pt-username" class="inputs"
                                         placeholder="akshat-jjain">
                                 </div>
                             </div>
@@ -293,15 +301,16 @@
                             </div>
                             <div class="input-div-cont">
                                 <aside>
-                                    <label for="posts" class="inp-labels">Posts</label>
+                                    <label for="comments" class="inp-labels">Comments</label>
                                 </aside>
                                 <div class="input-div">
-                                    <input type="number" name="posts" id="posts" class="inputs" placeholder="100">
+                                    <input type="number" name="comments" id="comments" class="inputs" placeholder="100">
                                 </div>
                             </div>
                             <div class="input-div">
-                                <input type="button" name="submit" id="submit" class="sub" value="Create" />
-                                <input type="button" name="Skip" id="skip3" class="skip" value="Skip & Next" onclick="skip(this.id)" />
+                                <input type="button" name="submit" id="submit" class="sub" value="Create"  onclick="loadPost()" />
+                                <input type="button" name="Skip" id="skip3" class="skip" value="Skip & Next"
+                                    onclick="skip(this.id)" />
                             </div>
                         </div>
                     </form>
@@ -318,7 +327,8 @@
                             </div>
                             <div class="input-div">
                                 <input type="button" name="submit" id="submit" class="sub" value="Create" />
-                                <input type="button" name="Skip" id="skip4" class="skip" value="Skip & Next" onclick="skip(this.id)" />
+                                <input type="button" name="Skip" id="skip4" class="skip" value="Skip & Next"
+                                    onclick="skip(this.id)" />
                             </div>
                         </div>
                     </form>
@@ -357,6 +367,5 @@
         <script src="/Instagram-clone/assets/js/create.js"></script>
 
     </body>
-
 
 </html>
